--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <version>2.3.23</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
