Cache Data is Filtered for New Data

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
     </pluginRepository>
   </pluginRepositories>
 
+  <!--dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.glassfish.jersey</groupId>
+        <artifactId>jersey-bom</artifactId>
+        <version>${jersey.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement-->
+
   <dependencies>
     <dependency>
       <groupId>javax</groupId>
@@ -46,6 +58,25 @@
       <artifactId>guava</artifactId>
       <version>23.1-jre</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-sheets</artifactId>
+      <version>v4-rev493-1.23.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
